<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Robo Control</string>
    <string name="title_activity_touch_control">Touch Control</string>
    <string name="title_activity_myo_control">MYO Control</string>
    <string name="action_settings">Settings</string>
    <string name="action_stop">Stop</string>
    <string name="action_scan">Scan</string>
    <string name="action_sync">MYO is Synced!</string>
    <string name="action_unsync">MYO is Unsynced! Please perform the Sync Gesture</string>
    <string name="action_connect">MYO successfully connected!</string>
    <string name="myo_lock">Locked</string>
    <string name="myo_unlock">Unlocked</string>
    <string name="action_disconnect">MYO disconnect!</string>
    <string name="button_touchcontrol">Touch Control</string>
    <string name="button_myocontrol">MYO Control</string>
    <string name="hub_error">Couldn\'t initialize Hub</string>
    <string name="dir_roll">Roll</string>
    <string name="dir_pitch">Pitch</string>
    <string name="dir_yaw">Yaw</string>
    <string name="dir_motor">Motor</string>
    <string name="dir_wheel">Wheel</string>
    <string name="null_percent">0%</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_wifiError">Please check your WiFi Connection</string>
    <string name="action_wifi">WiFi Settings</string>
    <string name="action_bluetooth">BT Settings</string>
    <string name="title_activity_help">Help</string>
    <string name="title_section1">General</string>
    <string name="title_section2">Settings</string>
    <string name="title_section3">Control</string>
    <string name="title_section4">Contact</string>
    <string name="action_help">Help</string>
    <string name="pref_stopMotor">Don\'t move</string>
    <string name="toast_debug_1">Only </string>
    <string name="toast_debug_2"> clicks to activate debug mode!</string>
    <string name="toast_debug_3"> clicks to deactivate debug mode!</string>
    <string name="toast_debug_activated">Debug mode activated!</string>
    <string name="toast_debug_deactivated">Debug mode deactivated!</string>
    <string name="app_version">1.4</string>
    

</resources>
