<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.roboboy.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
     <item
        android:id="@+id/action_wifi"
        android:orderInCategory="150"
        android:showAsAction="never"
        android:title="@string/action_wifi"/>
         <item
        android:id="@+id/action_bluetooth"
        android:orderInCategory="160"
        android:showAsAction="never"
        android:title="@string/action_bluetooth"/>
     <item
        android:id="@+id/action_help"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/action_help"/>
       
</menu>
